feat: API response

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="currency2">Deseja trocar por qual moeda?</label>
+                    <label for="currency2">Deseja converter para qual moeda?</label>
                     <select id="currency2">
                         <option value="dolar" selected>Dólar</option>
                         <option value="euro">Euro</option>
