feat: BRL_USD calculate

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
                 <div class="form-group">
                     <label for="slcCurrency1">Moeda</label>
                     <select id="slcCurrency1" name="slcCurrency1">
-                        <option value="dolar">Dólar</option>
-                        <option value="euro">Euro</option>
-                        <option value="real" selected>Real</option>
+                        <option value="USD">Dólar</option>
+                        <option value="EUR">Euro</option>
+                        <option value="BRL" selected>Real</option>
                     </select>
                 </div>
 
                 <div class="form-group">
-                    <label for="exchangeValue">Qual valor?</label>
+                    <label for="exchangeValue">Qual valor para conversão?</label>
                     <input type="number" id="exchangeValue" name="exchangeValue" />
                 </div>
 
                 <div class="form-group">
                     <label for="slcCurrency2">Deseja converter para qual moeda?</label>
                     <select id="slcCurrency2" name="slcCurrency2">
-                        <option value="dolar" selected>Dólar</option>
-                        <option value="euro">Euro</option>
-                        <option value="real">Real</option>
+                        <option value="USD" selected>Dólar</option>
+                        <option value="EUR">Euro</option>
+                        <option value="BRL">Real</option>
                     </select>
                 </div> 
 
