feat: calculate function

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
                 <button type="submit">Calcular</button>
             </form>
+
+            <div class="result-container"></div>
         </section>
     </main>
 
