--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
                 <button type="submit">Calcular</button>
             </form>
-
-            <div class="result-container"></div>
         </section>
+
+        <div class="result-area"></div>
     </main>
 
     <script src="scripts.js" type="text/javascript"></script>
